Integrated Login , SignUp and Forgot Password page

--- a/views/forgot-password.ejs
+++ b/views/forgot-password.ejs
@@ -70,10 +70,27 @@
       <div
         style="margin: 0 auto"
         class="col-12 col-md-6 col-lg-5 p-5 customborder"
-      >             
+      >
+        <% if(typeof reset !='undefined' ){ %> <% if( reset){ %> <% if(typeof
+        err !='undefined' ){ %> <% if( err !="" ){ %>
+        <div
+          class="alert alert-danger alert-dismissible fade show"
+          role="alert"
+        >
+          <strong> Error </strong>
+          <%= err %>.
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"
+          ></button>
+        </div>
+        <% } %> <% } %>
+
         <!-- // render the form to reset password  -->
         <form action="/user/reset-password" , method="POST">
-          <input type="hidden" name="_csrf" value="" />
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
           <div class="mb-3">
             <label for="password">Enter New Password</label>
             <input
@@ -96,7 +113,7 @@
               placeholder="Password Again"
             />
           </div>
-          <input type="hidden" name="email" value="" />
+          <input type="hidden" name="email" value="<%= email %>" />
           <div class="d-grid gap-3 mb-3">
             <input
               type="submit"
@@ -105,8 +122,28 @@
             />
           </div>
         </form>
+
+        <% }else{ %> <% } %> <% }else{ %>
+
+        <!-- // render the form to send reset link -->
+        <% if(typeof msg !='undefined' ){ %> <% if( msg !="" ){ %>
+        <div
+          class="alert alert-<%= type %> alert-dismissible fade show"
+          role="alert"
+        >
+          <strong> Error </strong>
+          <%= msg %>.
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"
+          ></button>
+        </div>
+        <% } %> <% } %>
+
         <form action="/user/forgot-password" , method="POST">
-          <input type="hidden" name="_csrf" value="" />
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
           <div class="mb-3">
             <label for="email">Enter Your Email</label>
             <input
@@ -127,6 +164,7 @@
             />
           </div>
         </form>
+        <% } %>
       </div>
     </div>
 
