--- a/views/login.ejs
+++ b/views/login.ejs
@@ -60,9 +60,13 @@
       .btn-signup:hover{
         color: var(--white) !important;
       }
-
+      /* .loginbg{
+        background-color: var(--lightblue);
+        padding: 30px;
+      } */
     </style>
   </head>
+
   <body>
    <!-- navbar  -->
    <nav class="navbar navbar-expand-lg navbar-light p-4">
@@ -99,8 +103,35 @@
         </div>
         <div class="col-md-6 col-12">
           <div style="margin: 0 auto" class="p-5 customborder">
+            <% if( error !="" ){ %>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+              <strong> Error </strong>
+              <%= error %>.
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <% } %>
+    
+            <!-- if someone tried to access a protected route  -->
+            <!-- this flash message will show them to login first  -->
+    
+            <% if( error_messages !="" ){ %>
+              <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                <strong> Error </strong>
+                <%= error_messages %>.
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+              <% } %>
+            <% if( success_messages !="" ){ %>
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+              <strong> Success </strong>
+              <%=success_messages %>.
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <% } %>
+             
+    
             <form action="/login" , method="POST">
-              <input type="hidden" name="_csrf" value="" />
+              <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
               <div class="mb-3">
                 <label for="username">Enter Your Email</label>
                 <input type="email" class="form-control form-control-lg" name="email" id="username" autocomplete="off"
@@ -123,8 +154,10 @@
             </form>
           </div>
         </div>
-      </div>   
+      </div>
+      
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
