--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -93,7 +93,14 @@
         <div class="row ">
             
                 <div class="col-md-6 col-12">
-                    <div style="margin: 0 auto;" class="p-5 customborder">                        
+                    <div style="margin: 0 auto;" class="p-5 customborder">
+                        <% if(typeof err !='undefined' ){ %>
+                            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                <strong> Error </strong>
+                                <%= err %>.
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            </div>
+                        <% } %>
                         <form action="/signup" method="POST">
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <div class="mb-3">
