--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -21,6 +21,7 @@
     <link rel="shortcut icon" href="../static/images/favicon.png" type="image/.png">
   <title>MakeItShort | Dashboard</title>
 </head>
+
 <style>
   :root {
     --blue: #225378;
@@ -40,7 +41,9 @@
     border-radius: 2%;
     border: 2px solid var(--blue);
   }
-
+  td{
+    min-height:60px;
+  }
   .card {
       border: none;
       border-radius: 25px;
@@ -81,13 +84,19 @@
     .headertext{
       text-align: center;
     }
+    .short{
+      max-width: 50vw;
+      overflow-wrap: break-word;
+    }
   }
   .headertext>p{
     margin-top: 30px;
     font-size: 18px;
   }
 </style>
+
 <body>
+
   <!-- navbar  -->
   <nav class="navbar navbar-expand-lg navbar-light p-4">
     <div class="container">
@@ -104,17 +113,19 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/index">Home</a>
           </li>
-          
+          <% if(logged){ %>
             <li class="nav-item">
               <a class="nav-link" href="/logout">Logout</a>
             </li>
-            
+            <% }else{ %>
               <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/signup">Signup</a>
               </li>
+              <% } %>
+            
         </ul>
       </div>
     </div>
@@ -123,18 +134,21 @@
   <!-- header -->
 <div class="container mb-5">
  
- 
+  <% if(!verified){ %>
     <div class="alert alert-danger alert-dismissible fade show mt-3" role="alert">
       <strong>ATTENTION !</strong> Please verify your account to continue using our services.
       <a href="/user/send-verification-email">Re-send Verification Email</a>
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-
+  <% } %>
+  <% if(typeof emailsent !='undefined' ){ %>
+    <% if(emailsent){ %>
       <div class="alert alert-success alert-dismissible fade show" role="alert">
         <strong>SUCCESS</strong> Verification Email Sent Sucessfully. Valid Only for 20 minutes.
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
-
+    <% } %>
+  <% } %>
   <div class="row">
     <div class="col-md-6 col-12 headertext">
       <h2>No technical expertise required</h2>
@@ -152,12 +166,23 @@
       <h2 class="text-center mb-5" id="create">Create your short Urls</h2>
       <div class="row">
         <div class="col-12 col-md-8 col-lg-6 p-5 mx-auto bg-light">
+          <% if(typeof err !='undefined' ){ %>
+            <% if(err){ %>
+              <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                <strong>ERROR </strong>
+                <%= err %>.
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+
+              </div>
+            <% } %>
+          <% } %>
+
           <form action="/create"  method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
             <div class="mb-3">
               <label for="url">Enter Long Url</label>
               <input type="url" class="form-control form-control-lg" name="original" id="url"
-                autocomplete="off" placeholder="Original Long URL" />
+                autocomplete="off" placeholder="You can enter multile urls separated by comma (,)." />
             </div>
             <div class="mb-3">
               <label for="short">Your Short slug</label>
@@ -189,20 +214,64 @@
             </tr>
           </thead>
           <tbody>
+        
+          <% var count=1 %>
+          <% const shorturl="https://sort-s.herokuapp.com/" %>
+          <% urls.reverse().forEach((url) => { %>
             <tr>
-              <th scope="row">Lorem, ipsum.</th>
-              <td class="d-md-block d-none" style="max-width: 50vw;overflow-wrap: break-word;"><a href="#">Lorem ipsum dolor sit amet.</a></td>
-              <td><a href="#">lorem</a></td>
-              <td><a type="button" href="#" class="btn btn-create eye"><i class="bi bi-eye"></i></a></td>
-            </tr>                     
+              <th scope="row"><%= count++ %></th>
+              <td class="d-md-block d-none" style="max-width: 50vw;overflow-wrap: break-word;"><a href=<%= url.originalUrl %>><%= url.originalUrl %></a></td>
+              <td class="short"><a href=<%= url.slug %>><%= shorturl+url.slug %></a></td>
+              <td><a type="button" href=<%= "/info/"+url.slug %> class="btn btn-create eye"><i class="bi bi-eye"></i></a></td>
+            </tr>              
+          <% }) %>
         </tbody>
       </table>
+        <%  }else{ %>
         <h2 class="text-center">No Urls created By You 😔😔</h2>
+        <% } %>
+
       </div>
     </div>
      <!-- my urls end-->
+    <%- include('./partials/footer.ejs'); %>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
+
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script>
+
+    
+    <script>
+  <% if(urls.length != 0){ %>
+
+<% urls.forEach((url) => { %>
+      var ct = document.getElementById('<%= url["_id"] %>').getContext('2d');
+
+      var myChart = new Chart(ct, {
+        type : 'doughnut',
+        data : {
+          labels : ['Total', 'Facebook', 'Twitter', 'Whatsapp'],
+          datasets : [{
+            label : 'Visits Distribution',
+            data : [<%= url['visits'] %>, <%= url['visitsFB'] %> , <%= url['visitsTW'] %> , <%= url['visitsWH'] %>],
+            backgroundColor: [
+                                'rgba(66, 103, 178, 1)',
+                                '#833AB4',
+                                '#075E54',
+                                '#405DE6'
+                            ],
+          }]
+        }
+      });
+
+  <%  }) %>
+  <%  } %>
+   
+    </script> -->
+    
+
 </body> 
+
 </html>
