--- a/views/forgot-password.ejs
+++ b/views/forgot-password.ejs
@@ -33,32 +33,25 @@
   </head>
 
   <body>
-    <!-- navbar  -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Authentications</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+     <!-- navbar  -->
+     <nav class="navbar navbar-expand-lg navbar-light p-4">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="/static/images/logo.png" width="150" height="36" alt="Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/signup">Signup</a>
-            </li>
+  
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">           
+              <li class="nav-item">
+                <a class="nav-link" href='/'>Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href='/login'>Login</a>
+              </li>
           </ul>
         </div>
       </div>
@@ -70,10 +63,27 @@
       <div
         style="margin: 0 auto"
         class="col-12 col-md-6 col-lg-5 p-5 customborder"
-      >             
+      >
+        <% if(typeof reset !='undefined' ){ %> <% if( reset){ %> <% if(typeof
+        err !='undefined' ){ %> <% if( err !="" ){ %>
+        <div
+          class="alert alert-danger alert-dismissible fade show"
+          role="alert"
+        >
+          <strong> Error </strong>
+          <%= err %>.
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"
+          ></button>
+        </div>
+        <% } %> <% } %>
+
         <!-- // render the form to reset password  -->
         <form action="/user/reset-password" , method="POST">
-          <input type="hidden" name="_csrf" value="" />
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
           <div class="mb-3">
             <label for="password">Enter New Password</label>
             <input
@@ -96,7 +106,7 @@
               placeholder="Password Again"
             />
           </div>
-          <input type="hidden" name="email" value="" />
+          <input type="hidden" name="email" value="<%= email %>" />
           <div class="d-grid gap-3 mb-3">
             <input
               type="submit"
@@ -105,8 +115,28 @@
             />
           </div>
         </form>
+
+        <% }else{ %> <% } %> <% }else{ %>
+
+        <!-- // render the form to send reset link -->
+        <% if(typeof msg !='undefined' ){ %> <% if( msg !="" ){ %>
+        <div
+          class="alert alert-<%= type %> alert-dismissible fade show"
+          role="alert"
+        >
+          <strong> Error </strong>
+          <%= msg %>.
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"
+          ></button>
+        </div>
+        <% } %> <% } %>
+
         <form action="/user/forgot-password" , method="POST">
-          <input type="hidden" name="_csrf" value="" />
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
           <div class="mb-3">
             <label for="email">Enter Your Email</label>
             <input
@@ -127,6 +157,7 @@
             />
           </div>
         </form>
+        <% } %>
       </div>
     </div>
 
