--- a/views/index.ejs
+++ b/views/index.ejs
@@ -158,7 +158,22 @@
     <div class="container py-3">
       <div class="row justify-content-center align-items-center">
         <div class="col-10 col-md-6 text-center">
-          
+          <% if(typeof err !='undefined' ){ %> <% if(err){ %>
+          <div
+            class="alert alert-danger alert-dismissible fade show"
+            role="alert"
+          >
+            <strong>ERROR </strong>
+            Can't find the Short Url .
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="alert"
+              aria-label="Close"
+            ></button>
+          </div>
+
+          <% } %> <% } %>
 
           <img
             src="/static/images/image.jpg"
@@ -270,7 +285,7 @@
   </div>
   <br>
   <br>
-    
+    <%- include('./partials/footer.ejs'); %>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
