--- a/views/index.ejs
+++ b/views/index.ejs
@@ -184,7 +184,7 @@
           <p>MakeItShort is the industry-leading link management platform to brand, track and share short URLs using a custom domain name</p>
           <div>
             <a class="btn btn-lg mt-md-3 mb-3 mb-md-0 btn-signup" href="/signup">SignUp</a>
-            <a class="btn btn-lg mt-md-3 btn-demo" href="#">Request a Demo</a>
+            <a class="btn btn-lg mt-md-3 btn-demo" target="_blank" href="https://youtu.be/H1offcufv2I">Request a Demo</a>
           </div>
           
         </div>
