--- a/views/info.ejs
+++ b/views/info.ejs
@@ -187,39 +187,39 @@
                   </div>
                   <div class="modal-body">
                     <div class="icon-container1 d-flex">
-                      <div class="smd"><a class="twitter-btn"><i class="img-thumbnail fab fa-twitter fa-2x"
+                      <div class="smd"><a target="_blank" class="twitter-btn"><i class="img-thumbnail fab fa-twitter fa-2x"
                             style="color:#02114e;background-color: aliceblue;cursor: pointer;"></i></a>
                         <p>Twitter</p>
                       </div>
-                      <div class="smd"><a class="facebook-btn"> <i class="img-thumbnail fab fa-facebook fa-2x"
+                      <div class="smd"><a target="_blank" class="facebook-btn"> <i class="img-thumbnail fab fa-facebook fa-2x"
                             style="color: #3b5998;background-color: #eceff5;cursor: pointer;"></i></a>
                         <p>Facebook</p>
                       </div>
                       <div class="smd" style="display: block !important;">
-                        <a class="sms-btn" style="display: block !important;align-items: center;text-align: center;"> 
+                        <a target="_blank" class="sms-btn" style="display: block !important;align-items: center;text-align: center;"> 
                           <i class="img-thumbnail fas fa-sms fa-2x" style="color: #0077b5;background-color: #eceff5;cursor: pointer;padding-top:15px;"></i>
                         </a>
                         <p>SMS</p>
                       </div>
-                      <div class="smd"><a class="reddit-btn"> <i class="img-thumbnail fab fa-reddit fa-2x "
+                      <div class="smd"><a target="_blank" class="reddit-btn"> <i class="img-thumbnail fab fa-reddit fa-2x "
                             style="color: #FF4500;background-color: #f5d8d8;cursor: pointer;"></i></a>
                         <p>Reddit</p>
                       </div>
                     </div>
                     <div class="icon-container2 d-flex">
-                      <div class="smd"><a class="whatsapp-btn"><i class="img-thumbnail fab fa-whatsapp fa-2x"
+                      <div class="smd"><a target="_blank" class="whatsapp-btn"><i class="img-thumbnail fab fa-whatsapp fa-2x"
                             style="color: #25D366;background-color: #cef5dc;cursor: pointer;"></i></a>
                         <p>Whatsapp</p>
                       </div>
-                      <div class="smd"><a class="pinterest-btn"><i class="img-thumbnail fab fa-pinterest fa-2x"
+                      <div class="smd"><a target="_blank" class="pinterest-btn"><i class="img-thumbnail fab fa-pinterest fa-2x"
                             style="color: #E60023;background-color: #fcdad7;cursor: pointer;"></i></a>
                         <p>Pinterest</p>
                       </div>
-                      <div class="smd"><a class="telegram-btn"><i class="img-thumbnail fab fa-telegram fa-2x"
+                      <div class="smd"><a target="_blank" class="telegram-btn"><i class="img-thumbnail fab fa-telegram fa-2x"
                             style="color: #4c6ef5;background-color: aliceblue;cursor: pointer;"></i></a>
                         <p>Telegram</p>
                       </div>
-                      <div class="smd"><a class="gmail-btn"><i class="img-thumbnail fab fa-google fa-2x"
+                      <div class="smd"><a target="_blank" class="gmail-btn"><i class="img-thumbnail fab fa-google fa-2x"
                             style="color: #db3236;background-color: #f1f4ed;cursor: pointer;"></i></a>
                         <p>Gmail</p>
                       </div>
